# over-engineered-fizzbuzz

./: Cargo.toml  LICENSE  README.MD  README.md
src/: fizzbuzz.rs  lib.rs  main.rs
