[package]
name = "over-engineered-fizzbuzz"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bdferul/over-engineered-fizzbuzz"
homepage = "https://github.com/bdferul/over-engineered-fizzbuzz"
license = "MIT OR Apache-2.0"
description = "An over-engineered FizzBuzz implementation."
documentation = "https://docs.rs/over-engineered-fizzbuzz/latest/over_engineered_fizzbuzz/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
